--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <button type="button" class="btn btn-primary" id="staffdel" disabled>
               <span class="material-symbols-outlined">person_remove</span>
             </button>
+            <button type="button" class="btn btn-primary" id="staffsign" disabled>
+              <span class="material-symbols-outlined">assignment_add</span>
+            </button>
             <button type="button" class="btn btn-primary" id="staffreload">
               <span class="material-symbols-outlined">refresh</span>
             </button>
