--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <div class="text-center staff-actions-contain">
           <div class="staff-actions-buttons">
             <div class="staff-btns btn-group btn-group-sm" role="group">
-              <button type="button" class="btn btn-primary" id="staffadd">
+              <button type="button" class="btn btn-primary" id="staffadd" title="Add Staff">
                 <span class="material-symbols-outlined">person_add</span>
               </button>
-              <button type="button" class="btn btn-primary" id="staffedit" disabled>
+              <button type="button" class="btn btn-primary" id="staffedit" title="Edit Staff" disabled>
                 <span class="material-symbols-outlined">manage_accounts</span>
               </button>
-              <button type="button" class="btn btn-primary" id="staffdel" disabled>
+              <button type="button" class="btn btn-primary" id="staffdel" title="Delete Staff (Disabled)" disabled>
                 <span class="material-symbols-outlined">person_remove</span>
               </button>
-              <button type="button" class="btn btn-primary" id="staffsign" disabled>
+              <button type="button" class="btn btn-primary" id="staffsign" title="Staff Sign-Off" disabled>
                 <span class="material-symbols-outlined">checklist_rtl</span>
               </button>
-              <button type="button" class="btn btn-primary" id="staffreload">
+              <button type="button" class="btn btn-primary" id="staffreload" title="Sync Data">
                 <span class="material-symbols-outlined">sync</span>
               </button>
             </div>
