--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                   <table style="margin-bottom:0;" class="card-table table table-sm table-striped table-bordered">
                     <thead>
                       <tr>
-                        <th scope="col">Title</th>
-                        <th scope="col" style="min-width:150px;">Status</th>
-                        <th scope="col">Issued</th>
-                        <th scope="col">Expires</th>
-                        <th scope="col">ETA</th>
-                        <th scope="col" style="min-width:150px;">Notes</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col" class="tblr-doc-name">Title</th>
+                        <th scope="col" class="tblr-doc-status" style="min-width:150px;">Status</th>
+                        <th scope="col" class="tblr-doc-issued">Issued</th>
+                        <th scope="col" class="tblr-doc-expires">Expires</th>
+                        <th scope="col" class="tblr-doc-eta">ETA</th>
+                        <th scope="col" class="tblr-doc-notes" style="min-width:150px;">Notes</th>
+                        <th scope="col" class="tblr-doc-actions">Actions</th>
                       </tr>
                     </thead>
                     <tbody class="tbllrow" id="doc-cert-tbl">
