Make StaffDelete gray

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <button type="button" class="btn btn-primary" id="staffedit" title="Edit Staff" disabled>
                 <span class="material-symbols-outlined">manage_accounts</span>
               </button>
-              <button type="button" class="btn btn-primary" id="staffdel" title="Delete Staff (Disabled)" disabled>
+              <button type="button" class="btn btn-secondary" id="staffdel" title="Delete Staff (Disabled)" disabled>
                 <span class="material-symbols-outlined">person_remove</span>
               </button>
               <button type="button" class="btn btn-primary" id="staffsign" title="Staff Sign-Off" disabled>
