Implement 'Valid For' Docs Column

--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
                     <thead>
                       <tr>
                         <th scope="col" class="tblr-doc-name">Title</th>
-                        <th scope="col" class="tblr-doc-status" style="min-width:150px;">Status</th>
+                        <th scope="col" class="tblr-doc-status">Status</th>
                         <th scope="col" class="tblr-doc-issued">Issued</th>
                         <th scope="col" class="tblr-doc-expires">Expires</th>
+                        <th scope="col" class="tblr-doc-dur">Valid For</th>
                         <th scope="col" class="tblr-doc-eta">ETA</th>
-                        <th scope="col" class="tblr-doc-notes" style="min-width:150px;">Notes</th>
+                        <th scope="col" class="tblr-doc-notes">Notes</th>
                         <th scope="col" class="tblr-doc-actions">Actions</th>
                       </tr>
                     </thead>
@@ -108,13 +109,14 @@
                   <table style="margin-bottom:0;" class="card-table table table-sm table-striped table-bordered">
                     <thead>
                       <tr>
-                        <th scope="col">Title</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Issued</th>
-                        <th scope="col">Expires</th>
-                        <th scope="col">ETA</th>
-                        <th scope="col">Notes</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col" class="tblr-doc-name">Title</th>
+                        <th scope="col" class="tblr-doc-status">Status</th>
+                        <th scope="col" class="tblr-doc-issued">Issued</th>
+                        <th scope="col" class="tblr-doc-expires">Expires</th>
+                        <th scope="col" class="tblr-doc-dur">Valid For</th>
+                        <th scope="col" class="tblr-doc-eta">ETA</th>
+                        <th scope="col" class="tblr-doc-notes">Notes</th>
+                        <th scope="col" class="tblr-doc-actions">Actions</th>
                       </tr>
                     </thead>
                     <tbody class="tbllrow" id="doc-lic-tbl">
@@ -129,13 +131,14 @@
                   <table style="margin-bottom:0;" class="card-table table table-sm table-striped table-bordered">
                     <thead>
                       <tr>
-                        <th scope="col">Title</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Issued</th>
-                        <th scope="col">Expires</th>
-                        <th scope="col">ETA</th>
-                        <th scope="col">Notes</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col" class="tblr-doc-name">Title</th>
+                        <th scope="col" class="tblr-doc-status">Status</th>
+                        <th scope="col" class="tblr-doc-issued">Issued</th>
+                        <th scope="col" class="tblr-doc-expires">Expires</th>
+                        <th scope="col" class="tblr-doc-dur">Valid For</th>
+                        <th scope="col" class="tblr-doc-eta">ETA</th>
+                        <th scope="col" class="tblr-doc-notes">Notes</th>
+                        <th scope="col" class="tblr-doc-actions">Actions</th>
                       </tr>
                     </thead>
                     <tbody class="tbllrow" id="doc-train-tbl">
@@ -150,13 +153,14 @@
                   <table style="margin-bottom:0;" class="card-table table table-sm table-striped table-bordered">
                     <thead>
                       <tr>
-                        <th scope="col">Title</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Issued</th>
-                        <th scope="col">Expires</th>
-                        <th scope="col">ETA</th>
-                        <th scope="col">Notes</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col" class="tblr-doc-name">Title</th>
+                        <th scope="col" class="tblr-doc-status">Status</th>
+                        <th scope="col" class="tblr-doc-issued">Issued</th>
+                        <th scope="col" class="tblr-doc-expires">Expires</th>
+                        <th scope="col" class="tblr-doc-dur">Valid For</th>
+                        <th scope="col" class="tblr-doc-eta">ETA</th>
+                        <th scope="col" class="tblr-doc-notes">Notes</th>
+                        <th scope="col" class="tblr-doc-actions">Actions</th>
                       </tr>
                     </thead>
                     <tbody class="tbllrow" id="doc-other-tbl">
