Fix 'ValidFor' Col Formatting

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <th scope="col" class="tblr-doc-status">Status</th>
                         <th scope="col" class="tblr-doc-issued">Issued</th>
                         <th scope="col" class="tblr-doc-expires">Expires</th>
-                        <th scope="col" class="tblr-doc-dur">Valid For</th>
+                        <th scope="col" class="tblr-doc-dur">Valid</th>
                         <th scope="col" class="tblr-doc-eta">ETA</th>
                         <th scope="col" class="tblr-doc-notes">Notes</th>
                         <th scope="col" class="tblr-doc-actions">Actions</th>
@@ -113,7 +113,7 @@
                         <th scope="col" class="tblr-doc-status">Status</th>
                         <th scope="col" class="tblr-doc-issued">Issued</th>
                         <th scope="col" class="tblr-doc-expires">Expires</th>
-                        <th scope="col" class="tblr-doc-dur">Valid For</th>
+                        <th scope="col" class="tblr-doc-dur">Valid</th>
                         <th scope="col" class="tblr-doc-eta">ETA</th>
                         <th scope="col" class="tblr-doc-notes">Notes</th>
                         <th scope="col" class="tblr-doc-actions">Actions</th>
@@ -135,7 +135,7 @@
                         <th scope="col" class="tblr-doc-status">Status</th>
                         <th scope="col" class="tblr-doc-issued">Issued</th>
                         <th scope="col" class="tblr-doc-expires">Expires</th>
-                        <th scope="col" class="tblr-doc-dur">Valid For</th>
+                        <th scope="col" class="tblr-doc-dur">Valid</th>
                         <th scope="col" class="tblr-doc-eta">ETA</th>
                         <th scope="col" class="tblr-doc-notes">Notes</th>
                         <th scope="col" class="tblr-doc-actions">Actions</th>
@@ -157,7 +157,7 @@
                         <th scope="col" class="tblr-doc-status">Status</th>
                         <th scope="col" class="tblr-doc-issued">Issued</th>
                         <th scope="col" class="tblr-doc-expires">Expires</th>
-                        <th scope="col" class="tblr-doc-dur">Valid For</th>
+                        <th scope="col" class="tblr-doc-dur">Valid</th>
                         <th scope="col" class="tblr-doc-eta">ETA</th>
                         <th scope="col" class="tblr-doc-notes">Notes</th>
                         <th scope="col" class="tblr-doc-actions">Actions</th>
