--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <button type="button" class="btn btn-secondary" id="staffdel" title="Delete Staff (Disabled)" disabled>
                 <span class="material-symbols-outlined">person_remove</span>
               </button>
-              <button type="button" class="btn btn-primary" id="staffsign" title="Staff Sign-Off" disabled>
+              <button type="button" class="btn btn-secondary" id="staffsign" title="Staff Sign-Off" disabled>
                 <span class="material-symbols-outlined">checklist_rtl</span>
               </button>
               <button type="button" class="btn btn-primary" id="staffreload" title="Sync Data">
