--- a/index.html
+++ b/index.html
@@ -246,19 +246,19 @@
             <div class="row">
               <div class="col">
                   <div class="form-label-group">
-                    <input type="date" class="form-control" id="se-sd" placeholder="" value="" autocomplete="off"/>
+                    <input type="date" class="form-control" id="se-sd" placeholder="" value="" aria-autocomplete="list"/>
                     <label for="floatingInputGrid">Approx. Start Date</label>
                   </div>
               </div>
               <div class="col">
                   <div class="form-label-group">
-                    <input type="date" class="form-control" id="se-ed" placeholder="" value="" autocomplete="off"/>
+                    <input type="date" class="form-control" id="se-ed" placeholder="" value="" aria-autocomplete="list"/>
                     <label for="floatingInputGrid">End Date</label>
                   </div>
               </div>
               <div class="col">
                   <div class="form-label-group">
-                    <input type="text" class="form-control" id="se-ten" placeholder="" value="" readonly autocomplete="off"/>
+                    <input type="text" class="form-control" id="se-ten" placeholder="" value="" readonly aria-autocomplete="list"/>
                     <label for="floatingInputGrid">Tenure</label>
                   </div>
               </div>
@@ -268,19 +268,19 @@
             <div class="row">
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-fn" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-fn" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">First Name</label>
                 </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-mn" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-mn" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">Middle Name</label>
                 </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-ln" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-ln" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">Last Name</label>
                 </div>
               </div>
@@ -288,13 +288,13 @@
             <div class="row">
               <div class="col">
                   <div class="form-label-group">
-                    <input type="date" class="form-control" id="se-dob" placeholder="" value="" autocomplete="off"/>
+                    <input type="date" class="form-control" id="se-dob" placeholder="" value="" aria-autocomplete="list"/>
                     <label for="floatingInputGrid">DOB</label>
                   </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-ssn" placeholder="XXX-XX-XXXX" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-ssn" placeholder="XXX-XX-XXXX" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">SSN</label>
                 </div>
               </div>
@@ -302,13 +302,13 @@
             <div class="row">
               <div class="col">
                   <div class="form-label-group">
-                    <input type="text" class="form-control" id="se-cpn" placeholder="" value="" autocomplete="off"/>
+                    <input type="text" class="form-control" id="se-cpn" placeholder="" value="" aria-autocomplete="list"/>
                     <label for="floatingInputGrid">Phone</label>
                   </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-eml" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-eml" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">Email</label>
                 </div>
               </div>
@@ -316,13 +316,13 @@
             <div class="row">
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-adl1" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-adl1" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">Address Line 1</label>
                 </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-adl2" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-adl2" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">Address Line 2</label>
                 </div>
               </div>
@@ -330,31 +330,31 @@
             <div class="row">
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-adcty" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-adcty" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">City</label>
                 </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-ads" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-ads" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">State</label>
                 </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-adpc" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-adpc" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">Postal Code</label>
                 </div>
               </div>
               <div class="col">
                 <div class="form-label-group">
-                  <input type="text" class="form-control" id="se-adc" placeholder="" value="" autocomplete="off"/>
+                  <input type="text" class="form-control" id="se-adc" placeholder="" value="" aria-autocomplete="list"/>
                   <label for="floatingInputGrid">Country</label>
                 </div>
               </div>
             </div>
             <div class="form-label-group">
-              <textarea class="form-control" placeholder="" id="se-note" style="right: 100%" autocomplete="off"></textarea>
+              <textarea class="form-control" placeholder="" id="se-note" style="right: 100%" aria-autocomplete="list"></textarea>
               <label for="floatingTextarea2">Notes</label>
             </div>
           </div>
