Implement Mutiline doc notes.

--- a/index.html
+++ b/index.html
@@ -209,6 +209,26 @@
         </div>
       </div>
     </div>
+    <div class="modal fade" id="dlgDocNote" tabindex="-1" aria-labelledby="docnote" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="dlgTitle">Document Notes</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="dlgText">
+            <div class="form-label-group">
+              <textarea rows="4" cols="50" class="form-control" placeholder="" id="sdne-note" style="right: 100%" aria-autocomplete="list"></textarea>
+              <label for="floatingTextarea2">Notes</label>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="dlgCancel">Cancel</button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="dlgTrue">Done</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="modal fade" id="dlgNotify" tabindex="-1" aria-labelledby="confdeldoc" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
